added the filter for all tables and pagination for user table